# CMakeLists files in this project can
#all this stuff is wrong cuz we're doing  too much configuring per 1 CMakeLists.txt file
cmake_minimum_required (VERSION 3.4)

set( CONAN_COMPILER "gcc" ) 
set( CONAN_COMPILER_VERSION "4.9" ) 
message( STATUS ${CMAKE_BINARY_DIR} )
message( STATUS ${CMAKE_BINARY_DIR} )
message( STATUS ${CMAKE_BINARY_DIR} )
message( STATUS ${CMAKE_BINARY_DIR} )
message( STATUS ${CMAKE_BINARY_DIR} )
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

add_library( Utilities STATIC src/Utilities.cpp )
set_target_properties( Utilities PROPERTIES COMPILE_FLAGS "-std=c++0x" )
message( STATUS "LIBSSSSSSS ${CONAN_LIBS}")
message( STATUS "LIBSSSSSSS ${CONAN_LIBS}")
message( STATUS "LIBSSSSSSS ${CONAN_LIBS}")
message( STATUS "LIBSSSSSSS ${CONAN_LIBS}")
message( STATUS "INCLUDES ${CONAN_INCLUDE_DIRS}")
message( STATUS "INCLUDES ${CONAN_INCLUDE_DIRS}")
message( STATUS "INCLUDES ${CONAN_INCLUDE_DIRS}")
message( STATUS "INCLUDES ${CONAN_INCLUDE_DIRS}")
message( STATUS  ${CONAN_INCLUDE_DIRS})                
message( STATUS  ${CONAN_LIB_DIRS})                        
message( STATUS  ${CONAN_BIN_DIRS})                        
message( STATUS  ${CONAN_RES_DIRS})                        
message( STATUS  ${CONAN_FRAMEWORK_DIRS})            
message( STATUS  ${CONAN_LIBS})                                
message( STATUS  ${CONAN_PKG_LIBS})                        
message( STATUS  ${CONAN_SYSTEM_LIBS})                  
message( STATUS  ${CONAN_FRAMEWORKS})                    
message( STATUS  ${CONAN_DEFINES})                          
message( STATUS  ${CONAN_BUILD_MODULES_PATHS})  
message( STATUS  ${CONAN_CMAKE_MODULE_PATH})      
                                                              
message( STATUS " ${CONAN_CXX_FLAGS}")                    
message( STATUS " ${CONAN_SHARED_LINKER_FLAGS}")
message( STATUS " ${CONAN_EXE_LINKER_FLAGS}")      
message( STATUS " ${CONAN_C_FLAGS}")                        
                                                              
target_link_libraries( Utilities PUBLIC ${CONAN_LIBS} )
target_include_directories(Utilities PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/ ${CONAN_INCLUDE_DIRS} )

set(CMAKE_VERBOSE_MAKEFILE ON)
